apps/helm-alb-ingress-nginx-public.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aws-alb-ingress-controller-public
  namespace: alb-ingress-nginx-public
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/load-balancer-name: "dev-alb-nginx-public"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:621123489063:certificate/b9a5ab99-775c-4c22-bfde-e08118b7f210
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200,404"
    alb.ingress.kubernetes.io/inbound-cidrs: 10.0.0.0/8, 0.0.0.0/0, 116.203.159.143/32, 173.245.48.0/20, 103.21.244.0/22, 103.22.200.0/22, 103.31.4.0/22, 141.101.64.0/18, 108.162.192.0/18, 190.93.240.0/20, 188.114.96.0/20, 197.234.240.0/22, 198.41.128.0/17, 162.158.0.0/15, 104.16.0.0/12, 172.64.0.0/13, 131.0.72.0/22
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/tags: Environment=dev
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "ssl-redirect"
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: alb-ingress-nginx-public-controller
              servicePort: http
